# app/internal/http/openapi.go
@@ -11,6 +11,7 @@ import (
 
 	pingHandler "gh.tarampamp.am/indocker-app/app/internal/http/handlers/ping"
 	routesListHandler "gh.tarampamp.am/indocker-app/app/internal/http/handlers/routes_list"
+	routesSubscribeHandler "gh.tarampamp.am/indocker-app/app/internal/http/handlers/routes_subscribe"
 	versionHandler "gh.tarampamp.am/indocker-app/app/internal/http/handlers/version"
 	latestVersionHandler "gh.tarampamp.am/indocker-app/app/internal/http/handlers/version_latest"
 	"gh.tarampamp.am/indocker-app/app/internal/http/openapi"
@@ -18,18 +19,22 @@ import (
 )
 
 type (
+	dockerRouter interface {
+		AllContainerURLs() map[string][]url.URL
+		SubscribeForRoutingUpdates() (sub <-chan map[string][]url.URL, stop func())
+	}
+
 	OpenAPI struct {
 		log *zap.Logger
 
 		handlers struct {
-			ping          func() openapi.PingResponse
-			version       func() openapi.AppVersionResponse
-			latestVersion func(http.ResponseWriter) (*openapi.AppVersionResponse, error)
-			routesList    func() openapi.RegisteredRoutesListResponse
+			ping            func() openapi.PingResponse
+			version         func() openapi.AppVersionResponse
+			latestVersion   func(http.ResponseWriter) (*openapi.AppVersionResponse, error)
+			routesList      func() openapi.RegisteredRoutesListResponse
+			routesSubscribe func(http.ResponseWriter, *http.Request) error
 		}
 	}
-
-	dockerRouter interface{ AllContainerURLs() map[string][]url.URL }
 )
 
 var _ openapi.ServerInterface = (*OpenAPI)(nil) // verify interface implementation
@@ -41,6 +46,7 @@ func NewOpenAPI(ctx context.Context, log *zap.Logger, dockerRouter dockerRouter)
 	si.handlers.version = versionHandler.New(version.Version()).Handle
 	si.handlers.latestVersion = latestVersionHandler.New(func() (string, error) { return version.Latest(ctx) }).Handle
 	si.handlers.routesList = routesListHandler.New(dockerRouter).Handle
+	si.handlers.routesSubscribe = routesSubscribeHandler.New(dockerRouter).Handle
 
 	return si
 }
@@ -70,6 +76,12 @@ func (o *OpenAPI) GetLatestAppVersion(w http.ResponseWriter, _ *http.Request) {
 
 func (o *OpenAPI) ListRoutes(w http.ResponseWriter, _ *http.Request) {
 	o.respToJson(w, o.handlers.routesList())
+}
+
+func (o *OpenAPI) SubscribeRoutes(w http.ResponseWriter, r *http.Request, _ openapi.SubscribeRoutesParams) {
+	if err := o.handlers.routesSubscribe(w, r); err != nil {
+		o.errorToJson(w, err, http.StatusInternalServerError)
+	}
 }
 
 // -------------------------------------------------- Error handlers --------------------------------------------------
